<resources>
    <string name="app_name">OglDevAndroid</string>
    <string name="title_activity_ogl_dev_main">OglDevMainActivity</string>

    <string name="btn_forward">Forward</string>
    <string name="btn_back">Back</string>
    <string name="btn_up">Up</string>
    <string name="btn_down">Down</string>
    <string name="btn_right">Right</string>
    <string name="btn_left">Left</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="ambi_light_title">Ambient Lighting</string>
    <string name="ambi_light_Intensity">Intensity:</string>
    <string name="ambi_light_Color">Color:</string>

    <string name="light_Intensity">Intensity:</string>
    <string name="light_Color">Color:</string>
    <string name="Color_red">Red:</string>
    <string name="Color_green">Green:</string>
    <string name="Color_blue">Blue:</string>
    <string name="Color_alpha">Alpha:</string>
    <string name="diffuse_light_title">Diffuse Lighting</string>
    <string name="ambi_light_position">Position:</string>
    <string name="Position_X">X:</string>
    <string name="Position_Y">Y:</string>
    <string name="Position_Z">Z:</string>

</resources>

